--- a/estilos.css
+++ b/estilos.css
@@ -1,10 +1,10 @@
 body{
  margin: 0px;
+ background: #F3F5FC;
 }
 
 main{
     margin: 0px;
-    background-color: aqua;
 }
 
 .logo{
@@ -21,18 +21,46 @@ main{
     top:20%;
     left: 10%;
 
-    background: red;
+    background: #F3F5FC;
+    border: 1px solid #a4bad5;
+    border-radius: 0.4em;
     resize: none;
+    font-weight: 100;
+    font-size: 2em;
 }
 
 .container-botones{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 10%;
     position: absolute;
     width: 55.5%;
-    height: 7%;
-    top:80%;
+    height: auto;
+    top:78%;
     left: 10%;
+    
+}
 
-    background: blue;
+.estructura-boton{
+    width: 100%;
+    height:max-content;
+    padding: 2.7%;
+
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    font-size: 1.2em;
+}
+
+.boton-encriptar{
+    background: #0A3871;
+    color: #FFFFFF;
+}
+
+.boton-desencriptar{
+    background: #D8DFE8;
+    color: #0A3871;
 }
 
 .container-pantalla{
@@ -42,6 +70,7 @@ main{
     top: 9%;
     left: 70%;
 
-    background-color: chartreuse;
+    background: white;
     border-radius: 32px;
+    box-shadow: 10px 20px 60px 5px #b4c5da;
 }
