--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 body{
  margin: 0px;
  background: #F3F5FC;
+ font-family: 'Inter', sans-serif;
 }
 
 main{
@@ -39,6 +40,17 @@ main{
     outline: none;
 }
 
+.info{
+    position: absolute;
+    bottom: 21%;
+    left: 10%;
+}
+
+.info p {
+    color: #495057;
+    font-weight: 500;
+    font-size: 1.1em;
+}
 
 .container-botones{
     display: flex;
@@ -145,4 +157,91 @@ main{
     border-radius: 1.4em;
     font-size: 1.2em;
     background: #D8DFE8;
+}
+
+
+/* Estilos responsive*/
+
+@media screen and (max-width:950px){
+    .campo-texto{
+        height: 30%;
+        width: 80%;
+    }
+
+    .info{
+        position: absolute;
+        bottom: 44%;
+        left: 10%;
+    }
+
+    .info p{
+        font-size: 1.3em;
+    }
+
+    .container-botones{
+        width: 80%;
+        top: 55%;
+    }
+
+    .container-pantalla{
+        height: 30%;
+        width: 80%;
+        top: 65%;
+        left: 10%;
+        text-align: center;
+        margin: 0px auto;
+    }
+
+    .imagen-munheco{
+        visibility: hidden;
+    }
+
+    .contenedor-texto{
+        position: absolute;
+        text-align: center;
+        margin: 0px auto;
+        top: 20%;
+
+    }
+
+    .contenedor-texto h3{
+        margin-top: 0px;
+        font-size: 2.4em;
+        
+    }
+
+    .contenedor-texto p{
+        font-size: 1.6em;
+    }
+
+    .boton-copiar{
+        position: absolute;
+        top: 80%;
+        padding: 2.2%;
+    }
+
+
+    
+}
+
+@media screen and (max-width:500px){
+    .info{
+        position: absolute;
+        bottom: 44%;
+        left: 10%;
+    }
+
+    .info p{
+        font-size: 0.9em;
+    }
+
+    .contenedor-texto h3{
+        margin-top: 0px;
+        font-size: 1.4em;
+        
+    }
+
+    .contenedor-texto p{
+        font-size: 1.2em;
+    }
 }
